# CW-PIR

./: .gitignore
constant_weight_pir/: CMakeLists.txt  Makefile  PIRClient.cpp  PIRClient.h  PIRServer.cpp  PIRServer.h  database.cpp  database.h  params.cpp  params.h  utils.cpp  utils.h
http/: CMakeLists.txt  main.cpp
